--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".SplashActivity"
-            android:theme="@style/Base.Theme.AppCompat.Dialog" >
+            android:name=".SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ChooseStreetActivity" />
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivity" />
+        <activity
+            android:name=".ItemDesDialog"/>
+        <activity android:name=".KalpiChooseActivity" />
     </application>
 
 </manifest>
